Changed Handlebar templating method

--- a/public/Handlebars/Pages/comicPage.hbs
+++ b/public/Handlebars/Pages/comicPage.hbs
@@ -1,3 +1,6 @@
+{{#>Base }} 
+  
+  {{#*inline "Page"}}
  <!-- Comic Page -->
       <div class="container">
         <!-- Date of Posting -->
@@ -57,3 +60,5 @@
         </div>
 
       {{/if}}
+  {{/inline}}
+{{/Base}}
