--- a/public/Handlebars/Partials/Layouts/base.hbs
+++ b/public/Handlebars/Partials/Layouts/base.hbs
@@ -13,11 +13,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>
-      Star Warrior Legends: 
       {{#if isComic}}
-       {{title}} Page {{currentPg}}
+        Star Warrior Legends: Chapter {{currentCh}} Page {{currentPg}}
       {{else}}
-       About
+        {{Title}}
       {{/if}}
     </title>
 
@@ -37,18 +36,10 @@
         <p>Navigation</p>
       {{/nav}}
 
-      {{#if isComic}}
-        {{#> comic }}
-          {{!-- Content goes here --}}
-          <p>comic Page</p>
-        {{/comic }}
-      {{else}}
-        {{#> about}}
-          {{!-- About goes here --}}
-          <p>about Page</p>
-        {{/about}}
-      {{/if}}
-
+   
+      {{#>Page}}
+        <p>Page goes here</p>
+      {{/Page}}
       <hr />
       <footer>
         {{#> footer}}
