--- a/public/Handlebars/Partials/Layouts/base.hbs
+++ b/public/Handlebars/Partials/Layouts/base.hbs
@@ -13,34 +13,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>
-      {{#if isComic}}
-        Star Warrior Legends: Chapter {{currentCh}} Page {{currentPg}}
-      {{else}}
-        {{Title}}
-      {{/if}}
+      {{>Title}}
     </title>
-
-    {{#if isComic}}
-      <link rel="stylesheet" href="/public/CSS/comics.css" />
-    {{/if}}
-
+    
     <style>
       body{
       background-color: lightblue;
       }
     </style>
+
+    {{#>Head}}
+    {{!-- Custom Page head --}}
+    {{/Head}}
   </head>
   <body>
     <div class="container-fluid">
+
       {{#> nav}}
         <p>Navigation</p>
       {{/nav}}
-
-   
+      
       {{#>Page}}
         <p>Page goes here</p>
       {{/Page}}
-      <hr />
+      
+      <hr />     
       <footer>
         {{#> footer}}
           {{!-- Footer goes here --}}
